libs/infrastructure/k8s/base/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: traefik
  name: sophia-ai-ingress
  namespace: sophia-ai-prod
spec:
  rules:
  - host: api.sophia-ai.com
    http:
      paths:
      - backend:
          service:
            name: sophia-api
            port:
              number: 8001
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - api.sophia-ai.com
    secretName: sophia-ai-tls
